--- a/html/index.html
+++ b/html/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will you be my Valentine?</title>
+    <title>permohonan maaf lucuk</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="valentine-container fade-in">
-        <h1 class="text-appear">Will you be my Valentine? 🌹</h1>
+        <h1 class="text-appear">Hai love Kamu masih nakalin aku?🥺</h1>
         <div class="button-group">
-            <button class="btn-accept pulse" onclick="handleLoveYes()">Absolutely!</button>
-            <button class="btn-deny wobble" onclick="handleLoveNo()">No way!</button>
+            <button class="btn-accept pulse" onclick="handleLoveYes()">Engga cayang ganteng</button>
+            <button class="btn-deny wobble" onclick="handleLoveNo()">Gamau maafin mau nakalin terus</button>
         </div>
         <div class="image-container zoom-effect">
             <img src="cat-rose.gif" loading="lazy">
