--- a/html/confirm.html
+++ b/html/confirm.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knew you would say yes!</title>
+    <title>aku tau kamu gabisa marahin aku lama😋</title>
     <link rel="stylesheet" href="confirm.css">
 </head>
 <body>
     <div class="yes-container fade-in">
-        <h1 class="header-text bounce-in">I knew you would say yes! ❤️</h1>
+        <h1 class="header-text bounce-in">AKU TAU KAMU GABISA NAKALIN AKU LAMA KRNA KANGEN SAMA GANTENGNYA SENDIRI😋</h1>
         <div class="gif-container">
             <img src="cat-kiss.gif" alt="Happy GIF" loading="lazy">
         </div>
